2014-10-16 Marco Giammarini <m.giammarini@warcomeb.it>

    * Iniziata l'implementazione del login, aggiungendo anche la classe LoginController

2014-10-15 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il dialog per il login e quindi la classe LoginDialog.

2014-10-14 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione updateActivity() della classe ActivityDatabase.

2014-10-13 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la visualizzazione del nome del tecnico designato nella tabella delle attivita'.

2014-10-08 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione fillActivityFields() in ActivityDialog.

2014-10-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione getActivity() in ActivityDatabase.

2014-10-06 Marco Giammarini <m.giammarini@warcomeb.it>

    * Completata la funzione di ricerca all'interno del database delle varie attivita'.

    * Aggiunta la visualizzazione delle attivita' e il cambio di colore in caso di deadline pressanti.
    E' comunque da testare bene.

2014-10-02 Marco Giammarini <m.giammarini@warcomeb.it>

    * Iniziato lo sviluppo sul widget della tabella per mostrare le varie attività.

2014-10-01 Marco Giammarini <m.giammarini@warcomeb.it>

    * Continua lo sviluppo dell'add delle attivitità.

2014-09-30 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il salvataggio su oggetto dell'activity.

2014-09-24 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la definizione vuota delle funzioni per la gestione del tab activity.

    * Aggiunte le funzioni per il salvataggio dei vari parametri all'interno della classe Activity.

2014-09-23 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la funzione addActivity() nel wrapper del database.

    * Estesa e quasi ultimata l'implementazione del openAddActivityDialog() e piccole sistemazioni in giro.

2014-09-15 Marco Giammarini <m.giammarini@warcomeb.it>
